Switch To using Front Matter

--- a/Drag_Static_Site/wwwroot/Posts/10222023.md
+++ b/Drag_Static_Site/wwwroot/Posts/10222023.md
@@ -1,3 +1,9 @@
-﻿# Test Post 1
+﻿---
+tags: bogusTag1, amogusTag1
+title: This was actually made on 10-22-2023
+published: 10/22/2023 12:00:00
+fileName: posts/10222023.md
+---
+# Test Post 1
 Visual studio does not like MD Files...
 
