--- a/Drag_Static_Site/wwwroot/Posts/10232023.md
+++ b/Drag_Static_Site/wwwroot/Posts/10232023.md
@@ -1,3 +1,9 @@
-﻿# I made this blog for fun
+﻿---
+tags: bogusTag1, bogusTag2
+title: Why I made this site
+published: 10/23/2023 12:00:00
+fileName: posts/10232023.md
+---
+# I made this site for fun
 
 Pretty much everything on here is amalgamation of other stuff...
