Updated with github action info

--- a/Drag_Static_Site/wwwroot/Posts/10262023.md
+++ b/Drag_Static_Site/wwwroot/Posts/10262023.md
@@ -12,8 +12,8 @@ I feel compelled to write a bit about them, since I seldom get to use them.
 ## What is a Pre-Build Event?
 
 If the name doesn't give it away, it's basically a placeholder where you can tell Visual Studio to run other commands before your program
-is built / compiled / constructed / created. Beyond that, I guess you can read MSDN, 
-if you want a more [thorough, albeit Microsofty, explanation](https://learn.microsoft.com/en-us/visualstudio/ide/how-to-specify-build-events-csharp?view=vs-2022).
+is built / compiled / constructed / created. <a href="https://learn.microsoft.com/en-us/visualstudio/ide/how-to-specify-build-events-csharp?view=vs-2022" target="_blank">Beyond that, I guess you can read MSDN,
+if you want a more thorough, albeit Microsofty, explanation.</a>
 
 ### Using them with making this Blog site
 
@@ -28,8 +28,13 @@ Thus I ended up figuring out how to get it to work via the following setup:
 
 #### The specific pre-build event looks like this:
 
+<a href="Posts/Images/PreBuildEventSetup2.png"><img src="/Posts/Images/PreBuildEventSetup2.png" width="500" target="_blank" title="Project Setup"></a>
 
-<a href="Posts/Images/PreBuildEventSetup2.png"><img src="/Posts/Images/PreBuildEventSetup2.png" target="_blank" title="The Pre-Build Event"></a>
+
+`dotnet build $(ProjectDir)../PostMetaDataGenerator/PostMetaDataGenerator.csproj -o $(ProjectDir)/PreBuildUtils/`
+
+`dotnet $(ProjectDir)/PreBuildUtils/PostMetaDataGenerator.dll`
+
 
 ℹ️ So in other words:
 
@@ -47,6 +52,8 @@ Still, I'm happy with the end result.
 
 Now, here's the fun part - let's see if the whole thing builds without needing to be adjusted for github actions.
 
-I'll make an edit to this post, in case you want to see the results.
+<s>I'll make an edit to this post, in case you want to see the results.</s>
+
+<sub>**Update (10/27/2023):** I adjusted the pre-build noted up above to factor in Github Actions and the Dot Net SDK knowing what to do with $(SolutionDir).</sub>
 
 
