Added Revamp 11/1, Added 11/4 post

--- a/Drag_Static_Site/wwwroot/Posts/11012023.md
+++ b/Drag_Static_Site/wwwroot/Posts/11012023.md
@@ -1,51 +1,44 @@
 ﻿---
-tags: blog, thoughts, Microsoft
-title: Microsoft Ignite 2024, Pt 1
+tags: blog, thoughts, Microsoft, Blazor
+title: Microsoft Ignite 2024 & Blazor
 published: 11/01/2023 21:00:00
 ---
 
-# Microsoft Ignite 2024 Pt 1: Power Platform Co-Stupid
+# Ignite 2024 - Blazor Offerings
 
-Ignite, one of Microsoft's biggest trade shows, is coming up on its 2024 rendition very soon. 
-Myself, being a .NET developer, am of course interested in what Microsoft (MSFT) has in store. Unfortunately, based on
-a totally not thorogh study, it appears Ignite 2024 is almost entirely about MSFT's latest fixation - AI.
+Ignite 2024 will be upon us soon, so I'm curious to see what MSFT has for Blazor this year. I will make it no secret that I love Blazor.💚
 
-# MSFT: We're Now The AI Company
 
-Microsoft has more or less been after the AI goalpost for a while. For starters, [ML.NET](https://learn.microsoft.com/en-us/dotnet/machine-learning/how-does-mldotnet-work) 🔗 has been around for a couple of years.
-There's a ton of other examples, but I'll leave you to go hunt them down. 
+## Surprisingly, Only 4 Sessions (with duplication!)
 
-This of course got more serious after [MSFT bought Chat GPT earlier this year](https://www.technocracy.news/microsoft-invests-10-billion-in-chatgpt-maker-openai/) 🔗. Since then, MSFT has been riding high on its stock and much of that has been due to their AI hype. Unfortunately, me being skeptical / cynical of the whole thing, am not totally impressed.
+So for this year, using the search on [MSFT's own ignite website 🔗](https://ignite.microsoft.com/en-US/sessions?search=Blazor&sortBy=relevance), we can see that there are 4 sessions that match a search containing Blazor.
 
-# Paltry Offerings
+This seems kind of smol, when you consider there are over 500 sessions this year. I suppose this may be due the sheer quantity of MSFT's offerings, but it also could be due to the overall direction of Ignite this year....
 
-Many of the AI innovations that MSFT has supposedly been selling as of late have been, for a lack of better words, terrible. The only exception may ironically be Bing Chat / Chat GPT. Yes, despite all the hype and hoorah, MSFT has managed to wrangle Bing into a somewhat effective fuzzy search + sentence completion site. 
 
-But aside from Bing Chat, the other things that they've shown off have left me... unimpressed.
+There are also other sessions for ASP.NET Core, .NET 8, etc,. I won't complain, t's good to see some amount of representation for .NET this year. The topics themselves though:
 
-## CarHSE StudY: Power Automate Copilot
+<a href="Posts/Images/ignite2024blazor.png"><img src="Posts/Images/ignite2024blazor.png" height="400" width="500"></a>
 
-For example, Power Automate's new AI assistant was over sold with a very canned and simplistic demo. If you watch the sales pitch: 
+### [What's New for Enterprise Developers in .NET 8, Q&A 🔗](https://ignite.microsoft.com/en-US/sessions/d9ea0d2c-1756-4ec6-91b2-8316e309d36a?source=sessions)
 
-<img src="https://msflowblogscdn.azureedge.net/wp-content/uploads/2023/03/PAD_GPTaction.gif">
+Of all the ones, this is probably the one I want to see the most. I am glad to see that Daniel Roth will be there to represent Blazor & ASP.NET. The others speakers, I am not so keen.
 
-It looks like it does _something_ in the demo and automates a lot of stuff. However, if you actually have used Power Platform, 
-you will realize this particular example doesn't encompass the near infinite workflow scenarios that Power Platform facilitates.
 
-This isn't to say that the Power Automate Copilot is useless. It does offer a nicer lookup of the documentation, I guess. But let's look
-at it a different way - 
 
-When I asked the Power Automate Co-Pilot to show me an example of how to use a Power App formula, it told me it couldn't do it. 
-That's right, it just gave up. However, Bing Chat was more than happy to facilitate my request.
+### [Lab: Building A Chat Bot w/ Blazor 🔗](https://ignite.microsoft.com/en-US/sessions/7d702927-b96d-499e-bf1c-87f68ebc8dd3?source=sessions)
 
-With that aside, I should emphasize that the power automate co-pilot is virtually no different from the original chat bot. 
-It has slightly more "personality" and again, an improved documentation search, but beyond that, its newer features are 
-all very specific. If you find something that works for your situation, I suppose you'll be happy. 
+I'm a bit underwhelmed by this particular topic, since there are already several recording and [guides on doing this exact same exercise 🔗](https://learn.microsoft.com/en-us/azure/azure-signalr/signalr-tutorial-build-blazor-server-chat-app). It was probably an easy pick for them since this year's ignite is all about AI, but still, I wish they had at least picked a different way of using AI with Blazor...
 
-But for Power Apps, as far as I could tell, it's not there yet.
+This session is being done twice, so really we only have three sessions...
 
-### To Be Continued
+### [Breakout: Building A Chat Bot W/ Blazor 🔗](https://ignite.microsoft.com/en-US/sessions/80cb0c1c-d2af-4e9d-975d-c94f135c976e?source=sessions)
 
-.... Since Ignite is still a few days away, I think this rant may have to take up more than one post. 😏
+Yeah, I thought my eyes were playing tricks on me as well, when I read this one. It's almost the same topic, albeit slightly different from the lab. I'm feeling underwhelmed right now.
 
-As of this writing, Ignite 2024 is slated for the week after next. 
+
+
+
+## Could Be Better
+
+I think it could have been better this year. For something MSFT has been touting so heavily (Blazor), I am really surprised they do not have more sessions for this year. Unless they are planning on adding more at the last minute, I think this year's Ignite looks to me, over-saturated with AI hype.
