Added support for share links

--- a/Drag_Static_Site/wwwroot/Posts/10232023.md
+++ b/Drag_Static_Site/wwwroot/Posts/10232023.md
@@ -1,6 +1,7 @@
 ﻿---
 tags: blog, thoughts, CSharp, DotNet
 title: Brief opinions on the new features in C# 11
+quicklink: CSharp11Opinions
 published: 10/23/2023 19:11:00
 ---
 
