--- a/Drag_Static_Site/wwwroot/Posts/10262023.md
+++ b/Drag_Static_Site/wwwroot/Posts/10262023.md
@@ -1,6 +1,7 @@
 ﻿---
 tags: blog, thoughts, CSharp, DotNet, VisualStudio
 title: Prebuild Events For VS
+quicklink: PreBuildEventVs
 published: 10/26/2023 11:50:00
 ---
 
