--- a/Drag_Static_Site/wwwroot/Posts/11012023.md
+++ b/Drag_Static_Site/wwwroot/Posts/11012023.md
@@ -2,6 +2,7 @@
 tags: blog, thoughts, Microsoft, Blazor
 title: Microsoft Ignite 2024 & Blazor
 published: 11/01/2023 21:00:00
+quicklink: Ignite2024Blazor
 ---
 
 # Ignite 2024 - Blazor Offerings
