--- a/Drag_Static_Site/wwwroot/Posts/11042023.md
+++ b/Drag_Static_Site/wwwroot/Posts/11042023.md
@@ -2,6 +2,7 @@
 tags: blog, thoughts, Microsoft
 title: Microsoft Ignite 2024 & Their Latest AI Image
 published: 11/04/2023 21:00:00
+quicklink: Ignite2024Ai
 ---
 
 # Microsoft Ignite 2024 - The Age of Sataya's Next Gamble
