Fix images not showing on 2 blog posts aof 11/6/2023

--- a/Drag_Static_Site/wwwroot/Posts/11042023.md
+++ b/Drag_Static_Site/wwwroot/Posts/11042023.md
@@ -54,7 +54,7 @@ But for Power Apps, as far as I could tell, it's not there yet.
 
 And last we get to one of the more impressive, but sadly still not quite there products, Bing Chat. 
 
-<a href="/Posts/Images/BingChat.png"><img src="/Posts/Images/BingChat.png" height="400" width="540"></a>
+<a href="Posts/Images/BingChat.png"><img src="Posts/Images/BingChat.png" height="400" width="540"></a>
 
 Bing's surprisingly robust, but that may be more or less, to be expected. The reason why I say that is Bing's chat is after all,
 based on Chat GPT, something that Microsoft BOUGHT. This is not to totally knock MSFT either, but MSFT has an unfortunate reputation
